Implementando metodos comprar e favoritar

--- a/src/app/criarproduto/criarproduto.component.html
+++ b/src/app/criarproduto/criarproduto.component.html
@@ -33,7 +33,7 @@
 
                     <div class="label-float d-flex justify-content-center">
                         <input [(ngModel)]='produto.videoProduto' type="text" id="LinkDoVideo" placeholder="" required>
-                        <label for="LinkDoVideo">Link do video*</label>
+                        <label for="LinkDoVideo">Link do video</label>
                     </div>
 
                     <div class="label-float d-flex justify-content-center">
@@ -45,19 +45,19 @@
 
                     <div class="label-float d-flex justify-content-center">
                         <input [(ngModel)]='produto.fotoProduto2' type="text" id="LinkDeFoto2" placeholder="" required>
-                        <label for="LinkDeFoto2">Link de foto2*</label>
+                        <label for="LinkDeFoto2">Link de foto2</label>
 
 
                     </div>
 
                     <div class="label-float d-flex justify-content-center">
                         <input [(ngModel)]='produto.fotoProduto3' type="text" id="LinkDeFoto3" placeholder="" required>
-                        <label for="LinkDeFoto3">Link de foto3*</label>
+                        <label for="LinkDeFoto3">Link de foto3</label>
                     </div>
 
                     <div class="label-float d-flex justify-content-center">
                         <input [(ngModel)]='produto.fotoProduto4' type="text" id="LinkDeFoto4" placeholder="" required>
-                        <label for="LinkDeFoto4">Link de foto4*</label>
+                        <label for="LinkDeFoto4">Link de foto4</label>
                     </div>
                 </div>
             </div>
