--- a/src/app/nosso-time/nosso-time.component.html
+++ b/src/app/nosso-time/nosso-time.component.html
@@ -45,12 +45,10 @@
     
 <!--Textos dos Integrntes-->
                     <hr>
-                    <p class="card-text borda infoTexto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio corrupti culpa dolor, totam laborum blanditiis et. Magni, cupiditate sapiente ratione, a corrupti alias, blanditiis esse impedit quia praesentium in repudiandae?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed voluptate similique qui ad neque dignissimos cum. Doloribus libero odio praesentium, non laborum numquam perferendis similique quos dicta iusto maxime vel?
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil facilis eius nam dolores explicabo exercitationem alias quisquam! Nemo delectus magnam natus a quas rem ipsa consequatur culpa, porro fuga doloribus.
+                    <p class="card-text borda infoTexto">Nascido e criado em São Paulo, Vitor sempre foi amante de tecnologia graças ao irmão mais velho, que o inspirou por meio de jogos a adorar computadores e videogames. Durante sua adolescência, ele fez um curso técnico em administração pela ETEC Camargo Aranha e logo depois entrou na USP para fazer o Curso Superior do Audiovisual. Nele, fez parte de diversos projetos de vídeos, curtas-metragens, séries, documentários e até jogos, participando principalmente como editor e produtor. Em 2021 resolveu retornar às suas origens estudando programação pelo curso da Generation, correlacionando toda sua bagagem para se tornar um programador alinhado com conceitos estéticos e empresariais. 
                     </p>
                     <b class="borda curiosidade" href="#" >Curiosidades:</b>
-                    <p class="card-text borda infoTexto1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae debitis harum, totam, asperiores eligendi illum deleniti laboriosam voluptate officiis earum eveniet illo odio? Ab repudiandae sunt molestias atque unde impedit?</p>
+                    <p class="card-text borda infoTexto1">Curiosidade: Além de ser apaixonado por jogos, digitais ou não, e mestrar RPG de mesa por anos, ele se interessa demais por reality shows e tem um cronograma com amigos anual para assistir o máximo possível.</p>
                  </div>
             </div>
         </div>
