--- a/src/app/tela-produtos/tela-produtos.component.html
+++ b/src/app/tela-produtos/tela-produtos.component.html
@@ -19,7 +19,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{item.nomeProduto}}</h5>
                         <p class="card-text">{{item.preco}}.</p>
-                        <a href="#" class="btn btn-primary" [routerLink]="['verProduto', item.idProduto]">Ver Mais</a>
+                        <a  class="btn btn-primary" [routerLink]="['verProduto', item.idProduto]">Ver Mais</a>
                         </div>
                 </div>
             </div>
