--- a/src/app/menu-logado/menu-logado.component.html
+++ b/src/app/menu-logado/menu-logado.component.html
@@ -12,7 +12,7 @@
             </li>
 
             <li class="nav-item">
-                <a class=" text-white nav-link" routerLink='sobreNos'>Sobre nós</a>
+                <a class=" text-white nav-link" routerLink='quemSomos'>Sobre nós</a>
             </li>
 
             <li class="nav-item">
@@ -20,7 +20,7 @@
             </li>
 
             <li class="nav-item">
-                <a class=" text-white nav-link" routerLink='contato'>Contato</a>
+                <a class=" text-white nav-link" routerLink='Contato'>Contato</a>
             </li>
         </ul>
 
